hphp/hack/test/typecheck/class_level_where_clauses/variance_with_constraint.php.exp
File "variance_with_constraint.php", line 19, characters 10-15:
Invalid return type (Typing[4110])
File "variance_with_constraint.php", line 18, characters 69-71:
Expected int
File "variance_with_constraint.php", line 18, characters 40-42:
But got num
File "variance_with_constraint.php", line 27, characters 10-15:
Invalid return type (Typing[4110])
File "variance_with_constraint.php", line 25, characters 49-51:
Expected int
File "variance_with_constraint.php", line 26, characters 24-26:
But got num
File "variance_with_constraint.php", line 26, characters 24-26:
Considering that this type argument is contravariant with respect to ContravarianceBase
File "variance_with_constraint.php", line 30, characters 10-15:
Invalid return type (Typing[4110])
File "variance_with_constraint.php", line 29, characters 27-29:
Expected int
File "variance_with_constraint.php", line 29, characters 46-48:
But got num
File "variance_with_constraint.php", line 29, characters 46-48:
Considering that this type argument is invariant with respect to Base
